--- a/src/Components/Contact/Contact.module.scss
+++ b/src/Components/Contact/Contact.module.scss
@@ -1,12 +1,17 @@
+@import "../../Styles/_settings.scss";
+
 .divContact {
+  display: flex;
+  flex-direction: column;
   border-radius: 14px;
   border-color: #ececec;
   background-color: #40c07b;
-  height: 118px;
   padding: 15px;
 }
 
 .clickableText {
+  display: flex;
+  flex-direction: column;
   font-family: Arial;
   font-weight: 500;
   text-align: left;
@@ -21,4 +26,15 @@
   color: white;
   font-size: 15px;
   line-height: 24px;
+  margin-top: 15px;
+}
+
+
+@media only screen and (max-width: $website-SM-width) {
+  .clickableText {
+    flex-direction: row;
+    :first-child::after {
+      content: "\00a0";
+    }
+  }
 }
