--- a/src/pages/Guide/Components/GuideBox/guideBox.module.scss
+++ b/src/pages/Guide/Components/GuideBox/guideBox.module.scss
@@ -1,24 +1,20 @@
-.box {
+.guideBoxDiv {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   border-radius: 14px;
-  height: 169px;
+  height: 60px;
   width: auto;
   flex-direction: column;
   border: solid 1px #ececec;
-  background-color: white;
+  background-color: #2e95ec;
 }
 
-.boxTitle {
+.guideBoxTitle {
   font-family: "Arial";
-  font-size: 14px;
-  font-weight: 600;
-}
-
-.imageLogo {
-  width: 34px;
-  height: 34px;
-  object-fit: contain;
+  font-size: 18px;
+  line-height: 1.33;
+//  font-weight: 1000;
+  color: white;
 }
