update FAQ & other things

--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -1,3 +1,6 @@
-.body{
-    width: 100vw;
+body {
+  width: 100vw;
+  line-height: 1.42857;
+  font-family: helvetica neue, Helvetica, Arial, sans-serif;
+  color: #565a5c;
 }
