--- a/src/pages/SearchAds/searchAds.module.scss
+++ b/src/pages/SearchAds/searchAds.module.scss
@@ -6,11 +6,11 @@
   margin: 0 auto;
 }
 
-.publishAdTitle {
+.searchAdsTitle {
   margin-top: 20px;
   margin-bottom: 10px;
   font-size: 30px;
 }
-.publishAdText {
+.searchAdsText {
   font-size: 14px;
 }
