--- a/src/pages/Guide/Components/GuideBox/guideBox.module.scss
+++ b/src/pages/Guide/Components/GuideBox/guideBox.module.scss
@@ -15,6 +15,7 @@
   font-family: "Arial";
   font-size: 18px;
   line-height: 1.33;
-//  font-weight: 1000;
+  //  font-weight: 1000;
   color: white;
+  margin: auto;
 }
