--- a/src/pages/AboutUs/aboutUs.module.scss
+++ b/src/pages/AboutUs/aboutUs.module.scss
@@ -1,18 +1,64 @@
 @import "../../Styles/_settings.scss";
 
+p {
+  margin: 0 0 10px;
+}
 .wrapper {
-  max-width: $website-width;
-  width: 90%;
-  margin: 50px auto;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-.aboutUsText {
+.row {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.sideMenuAndPageContentFlex {
+  display: flex;
+  flex-direction: row;
+}
+.sideMenuDiv {
+  width: 25%;
+}
+
+.pageContentDiv {
+  width: 75%;
+}
+.infoPlusImageDiv {
+  display: flex;
+  flex-direction: row;
+}
+.infoDiv {
+  width: 33.33333%;
+}
+.statsList {
+  margin: 15px 0;
+  padding-left: 0;
+  list-style: none;
+}
+.statsNumbers {
+  margin-top: 0 !important;
+  margin-bottom: 10px;
+  color: #2593ef;
+  font-size: 50px;
+  font-weight: 100;
+  text-align: center;
+}
+
+.statsText {
   font-size: 14px;
-  line-height: 1.42857;
+  text-align: center;
 }
 
-.moreInfo {
-  font-size: 18px;
+.imageDiv {
+  width: 66.66667%;
+}
+
+.image {
+  width: 100%;
+  vertical-align: middle;
 }
 
 .hrcss {
@@ -22,29 +68,15 @@
   border-top: 1px solid #eee;
 }
 
-.infoPlusImageDiv {
-  display: flex;
-  flex-direction: row;
-  margin: 30px 0px;
+.contactUsDiv {
+  margin-bottom: 30px;
 }
 
-.infoDiv {
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.moreInfoDiv {
+  width: 100%;
 }
-.infoDiv h3 {
-  color: #2593ef;
-  font-size: 50px;
-  font-weight: 400;
-}
-
-.imageDiv {
-  width: 70%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.moreInfo {
+  font-size: 18px;
 }
 
 .contactUsAll {
@@ -53,18 +85,80 @@
 }
 
 .contactUsLeft {
-  display: flex;
-  flex-direction: column;
   width: 50%;
 }
 
 .contactUsRight {
-  display: flex;
-  flex-direction: column;
   width: 50%;
 }
 
-.contactUsAll .aboutUsText {
-  margin: 0;
-  line-height: 1.5;
+.contactUsText {
+  margin-bottom: 3px;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .statsNumbers {
+    font-size: 35px !important;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .statsNumbers {
+    font-size: 35px !important;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .infoDiv {
+    width: 100%;
+  }
+  .statsList {
+    margin-top: 0;
+    margin-bottom: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .wrapper {
+    width: 750px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .sideMenuAndPageContentFlex {
+    flex-direction: column;
+  }
+  .infoDiv {
+    width: 100%;
+  }
+  .infoPlusImageDiv {
+    flex-direction: column;
+  }
+
+  .sideMenuDiv {
+    width: 100%;
+  }
+
+  .pageContentDiv {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .wrapper {
+    width: 970px;
+  }
+
+  .row {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .wrapper {
+    width: 1170px;
+  }
 }
