--- a/src/pages/Guide/Components/GuideBoxesGrid/guideBoxesGrid.module.scss
+++ b/src/pages/Guide/Components/GuideBoxesGrid/guideBoxesGrid.module.scss
@@ -1,9 +1,25 @@
+@import "../../../../Styles/_settings.scss";
 .guideBoxesGrid {
+  display: grid;
+  margin: auto;
+  width: 1040px;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 20px;
+  margin-top: 15px;
+}
+
+//tablet
+@media only screen and (max-width: "1200px") {
+  .guideBoxesGrid {
     display: grid;
     margin: auto;
-    width: 1040px;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 20px;
+    width: auto;
+    grid-template-columns: 1fr;
+    column-gap: 0px;
     margin-top: 15px;
   }
-  
+}
+
+//mobile
+@media only screen and (max-width: $website-XS-width) {
+}
