--- a/src/pages/Guide/guide.module.scss
+++ b/src/pages/Guide/guide.module.scss
@@ -8,47 +8,44 @@ body {
   padding: 0;
 }
 
+.wrapper {
+  max-width: $website-width;
+  width: 90%;
+  margin: 0 auto;
+}
+
 .howToUseTitleDiv {
-  width: 1040px;
   margin: auto;
   margin-top: 30px;
 }
 
 .howToUseTitle {
-  font-family: Arial;
   font-size: 30px;
   font-weight: 500;
   line-height: 1.1;
   text-align: left;
-  color: #616872;
 }
 
 .howToUseDescriptionDiv {
-  width: 1040px;
   margin: auto;
   margin-top: 10px;
 }
 
 .howToUseDescription {
-  font-family: Arial;
   font-size: 14px;
   line-height: 1.42857;
   text-align: left;
-  color: #616872;
 }
 
 .publishAdDiv {
-  width: 1040px;
   margin: auto;
 }
 
 .publishAdTitle {
-  font-family: Arial;
   font-size: 24px;
   font-weight: 500;
   line-height: 1.1;
   text-align: left;
-  color: #616872;
 }
 
 .publishAdTitleDiv {
@@ -59,9 +56,15 @@ body {
   margin-top: 10px;
 }
 .publishAdDescription {
-  font-family: Arial;
   font-size: 14px;
   line-height: 1.42857;
   text-align: left;
-  color: #616872;
+}
+
+//tablet
+@media only screen and (max-width: "1200px") {
+}
+
+//mobile
+@media only screen and (max-width: $website-XS-width) {
 }
