--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -1,5 +1,6 @@
 body {
   width: 100vw;
+  font-size: 14px;
   line-height: 1.42857;
   font-family: helvetica neue, Helvetica, Arial, sans-serif;
   color: #565a5c;
