--- a/src/pages/AboutUs/aboutUs.module.scss
+++ b/src/pages/AboutUs/aboutUs.module.scss
@@ -1,8 +1,5 @@
 @import "../../Styles/_settings.scss";
 
-p {
-  margin: 0 0 10px;
-}
 .wrapper {
   width: 1170px;
   margin-right: auto;
@@ -52,6 +49,7 @@ p {
 
 .statsText {
   font-size: 14px;
+  margin: 0 0 10px;
   text-align: center;
 }
 
@@ -66,6 +64,10 @@ p {
 
 .aboutUsTextDiv {
   margin-bottom: 30px;
+}
+
+.aboutUsText {
+  margin: 0 0 10px;
 }
 
 .hrcss {
@@ -105,6 +107,7 @@ p {
 
 .contactUsText {
   margin-bottom: 3px;
+  margin: 0 0 10px;
 }
 
 @media only screen and (max-width: 1200px) {
