--- a/src/pages/help/Components/Contact/Contact.module.scss
+++ b/src/pages/help/Components/Contact/Contact.module.scss
@@ -3,6 +3,7 @@
 .divContact {
   display: flex;
   flex-direction: column;
+  width: 100%;
   border-radius: 14px;
   border-color: #ececec;
   background-color: #40c07b;
