--- a/src/pages/HowToStolenArticles/howToStolenArticles.module.scss
+++ b/src/pages/HowToStolenArticles/howToStolenArticles.module.scss
@@ -1,16 +1,22 @@
 @import "../../Styles/_settings.scss";
 
 .wrapper {
-  display: flex;
   max-width: $website-width;
   width: 90%;
   margin: 0 auto;
 }
 
-.pageContent {
-  display: flex;
-  flex-direction: column;
-  width: 75%;
+.suggestedThemesDiv {
+  width: 1040px;
+  margin: auto;
+  margin-top: 30px;
+}
+
+.suggestedThemes {
+  font-family: Arial;
+  font-size: 20px;
+  text-align: left;
+  color: #616872;
 }
 
 .caresItemTextDanger {
