howtopages + routing + menu changes

--- a/src/Components/HelpPage/helpPage.module.scss
+++ b/src/Components/HelpPage/helpPage.module.scss
@@ -23,3 +23,15 @@
     box-sizing: border-box;
   }
 }
+
+//mobile
+@media only screen and (max-width: $website-XS-width) {
+  .wrapper {
+    flex-direction: column;
+    max-width: $website-XS-width;
+    width: 100%;
+    padding: 0 15px;
+    margin: 0;
+    box-sizing: border-box;
+  }
+}
