--- a/src/pages/HowToProtectYourself/howToProtectYourself.module.scss
+++ b/src/pages/HowToProtectYourself/howToProtectYourself.module.scss
@@ -1,20 +1,29 @@
 @import "../../Styles/_settings.scss";
 
+.suggestedThemesDiv {
+  width: 1040px;
+  margin: auto;
+  margin-top: 30px;
+}
+
+.suggestedThemes {
+  font-family: Arial;
+  font-size: 20px;
+  text-align: left;
+  color: #616872;
+}
+
 .caresItemTextDanger {
   margin-bottom: 0px;
 }
 .caresItemText {
   font-size: 14px;
   line-height: 1.42857;
-  margin-bottom: 0px;
+  margin-bottom: 10px;
 }
 
 .caresItemTextDanger {
   color: #e74c3c;
-}
-
-.caresMainTitle {
-  font-size: 30px;
 }
 .caresTitle {
   color: #565a5c;
